// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`an instruction set that begins drawing a path and then fills it and then clears part of the drawing should have recorded a clearRect 1`] = `
[
  "context.beginPath()",
  "context.moveTo(0,0)",
  "context.lineTo(3,0)",
  "context.lineTo(0,3)",
  "context.lineWidth = 1",
  "context.fill()",
  "context.save()",
  "context.transform(1,0,0,1,0,0)",
  "context.clearRect(0,0,1,1)",
  "context.restore()",
]
`;

exports[`an instruction set that changes state and draws a rectangle and changes state and draws another rectangle should have recorded everything in the right order 1`] = `
[
  "context.fillStyle = "#f00"",
  "context.lineWidth = 1",
  "context.beginPath()",
  "context.moveTo(0,0)",
  "context.lineTo(1,0)",
  "context.lineTo(1,1)",
  "context.lineTo(0,1)",
  "context.lineTo(0,0)",
  "context.closePath()",
  "context.moveTo(0,0)",
  "context.fill()",
  "context.fillStyle = "#00f"",
  "context.beginPath()",
  "context.moveTo(2,0)",
  "context.lineTo(3,0)",
  "context.lineTo(3,1)",
  "context.lineTo(2,1)",
  "context.lineTo(2,0)",
  "context.closePath()",
  "context.moveTo(2,0)",
  "context.fill()",
]
`;

exports[`an instruction set that changes state and draws a rectangle and then clears a rectangle should no longer have recorded the first rectangle 1`] = `[]`;

exports[`an instruction set that changes state and draws a rectangle and then partially clears that rectangle should end up with a rectangle followed by a clearRect 1`] = `
[
  "context.fillStyle = "#f00"",
  "context.lineWidth = 1",
  "context.beginPath()",
  "context.moveTo(0,0)",
  "context.lineTo(1,0)",
  "context.lineTo(1,1)",
  "context.lineTo(0,1)",
  "context.lineTo(0,0)",
  "context.closePath()",
  "context.moveTo(0,0)",
  "context.fill()",
  "context.save()",
  "context.transform(1,0,0,1,0,0)",
  "context.clearRect(0.5,0,2,2)",
  "context.restore()",
]
`;
